# Amosgame

./: CMakeLists.txt  asset_manager.cpp  asset_manager.h  game.cpp  game.h  level_designer.cpp  level_designer.h  main.cpp  main_designer.cpp
assets/: items.json  level_1.json  level_2.json  level_3.json  level_tiles.json  lion-enemy.json  player.json  sheep-enemy.json
game_objects/: CMakeLists.txt  player.cpp  player.h
graphics/: CMakeLists.txt  animated_sprite.cpp  animated_sprite.h  graphics.cpp  graphics.h  sprite.h
utilities/: CMakeLists.txt  physics.cpp  physics.h  toggle.cpp  toggle.h  vec.h
world/: CMakeLists.txt  action.cpp  action.h  ai_input.cpp  ai_input.h  audio.cpp  audio.h  camera.cpp  camera.h  events.cpp  events.h  fsm.cpp  fsm.h  game_object.cpp  game_object.h  input.cpp  input.h  keyboard_input.cpp  keyboard_input.h  level.h  projectile.cpp  projectile.h  quadtree.cpp  quadtree.h  sheep.cpp  sheep.h  states.cpp  states.h  tilemap.cpp  tilemap.h  world.cpp  world.h
